--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
         <h2 id="head2">The Picasso Paintings </h2>
         <div class="contianer">
-            <div class="paint1">Painting 1</div>
-                <img class="pt1" src="https://victorhugomariano.com/cdn/shop/products/canvas-_in_-24x36-wall-621a97fd9823f.jpg?v=1665609626">
-            <div class="paint2" >Painting 2</div>
-                <img class="pt2" src="https://sothebys-com.brightspotcdn.com/dims4/default/a20e86b/2147483647/strip/true/crop/450x536+0+0/resize/684x815!/quality/90/?url=http%3A%2F%2Fsothebys-brightspot-migration.s3.amazonaws.com%2F20%2F3f%2Fe0%2F337d3e01f64e8fd933fb212088a00aef806fc9f0a9ec8e0223e0f3bb27%2Fpicasso-announcement-1.jpg">
-            <div class="paint3" >Painting 3</div>
-                <img class="pt3" src="https://i.ebayimg.com/images/g/7KkAAOSwMxRjG-Fn/s-l1600.jpg">
+            <div class="paint1">Painting 1
+                <img class="pt1" src="https://victorhugomariano.com/cdn/shop/products/canvas-_in_-24x36-wall-621a97fd9823f.jpg?v=1665609626"></div>
+            <div class="paint2" >Painting 2
+                <img class="pt2" src="https://sothebys-com.brightspotcdn.com/dims4/default/a20e86b/2147483647/strip/true/crop/450x536+0+0/resize/684x815!/quality/90/?url=http%3A%2F%2Fsothebys-brightspot-migration.s3.amazonaws.com%2F20%2F3f%2Fe0%2F337d3e01f64e8fd933fb212088a00aef806fc9f0a9ec8e0223e0f3bb27%2Fpicasso-announcement-1.jpg"></div>
+            <div class="paint3" >Painting 3
+                <img class="pt3" src="https://i.ebayimg.com/images/g/7KkAAOSwMxRjG-Fn/s-l1600.jpg"></div>
         </div>
         <div class="contianer2">
             <form class="Eform" action="mailto:someone@example.com" method="post" enctype="text/plain">E-Mail:<br>
